; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp_native.c_i386_send_NMI.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp_native.c_i386_send_NMI.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i64 0, align 8
@NMIPIs_enabled = common dso_local global i64 0, align 8
@cpu_to_lapic = common dso_local global i32* null, align 8
@INTERPROCESSOR = common dso_local global i32 0, align 4
@LAPIC_ICR_DM_NMI = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @i386_send_NMI(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i64, i64* @FALSE, align 8
  %5 = call i64 @ml_set_interrupts_enabled(i64 %4)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* @NMIPIs_enabled, align 8
  %7 = load i64, i64* @FALSE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @i386_cpu_IPI(i32 %10)
  br label %23

12:                                               ; preds = %1
  %13 = load i32*, i32** @cpu_to_lapic, align 8
  %14 = load i32, i32* %2, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @INTERPROCESSOR, align 4
  %19 = call i32 @LAPIC_VECTOR(i32 %18)
  %20 = load i32, i32* @LAPIC_ICR_DM_NMI, align 4
  %21 = or i32 %19, %20
  %22 = call i32 @LAPIC_WRITE_ICR(i32 %17, i32 %21)
  br label %23

23:                                               ; preds = %12, %9
  %24 = load i64, i64* %3, align 8
  %25 = call i64 @ml_set_interrupts_enabled(i64 %24)
  ret void
}

declare dso_local i64 @ml_set_interrupts_enabled(i64) #1

declare dso_local i32 @i386_cpu_IPI(i32) #1

declare dso_local i32 @LAPIC_WRITE_ICR(i32, i32) #1

declare dso_local i32 @LAPIC_VECTOR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
